--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -4,7 +4,7 @@
       <div class="container-xl px-4">
         <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
           <a href="/">
-            <%= image_tag "logo.svg", width: "110", height: "32", alt: "Tabler", class: "navbar-brand-image" %>
+            <%= image_tag "logo-dark.png", width: "110", height: "32", alt: "Tabler", class: "navbar-brand-image" %>
           </a>
         </h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
@@ -482,7 +482,7 @@
           <div class="col-lg-3 mb-3">
             <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="#"
               aria-label="Bootstrap">
-              <%= image_tag "logo.svg", width: "110", height: "32", alt: "Tabler", class: "d-block me-2" %>
+              <%= image_tag "logo-dark.png", width: "110", height: "32", alt: "Tabler", class: "d-block me-2" %>
             </a>
             <ul class="list-unstyled small text-muted">
               <li class="mb-2">
