--- a/app/views/body/_vertical.html.erb
+++ b/app/views/body/_vertical.html.erb
@@ -7,7 +7,7 @@
         </button>
         <h1 class="navbar-brand navbar-brand-autodark">
           <a href="/">
-            <%= image_tag "logo.svg", width: "110", height: "32", alt: "Portal", class: "navbar-brand-image" %>
+            <%= image_tag "logo-dark.png", width: "110", height: "32", alt: "Portal", class: "navbar-brand-image" %>
           </a>
         </h1>
         <div class="navbar-nav flex-row d-lg-none">
